RESOLVED FIXED86761
[Qt] Fix MiniBrowser by using correct syntax for qrc URLs
https://bugs.webkit.org/show_bug.cgi?id=86761
Summary [Qt] Fix MiniBrowser by using correct syntax for qrc URLs
Caio Marcelo de Oliveira Filho
Reported 2012-05-17 11:46:35 PDT
[Qt] Fix MiniBrowser by using correct syntax for qrc URLs
Attachments
Patch (2.25 KB, patch)
2012-05-17 11:47 PDT, Caio Marcelo de Oliveira Filho
menard: review+
Caio Marcelo de Oliveira Filho
Comment 1 2012-05-17 11:47:28 PDT
Caio Marcelo de Oliveira Filho
Comment 2 2012-05-17 11:59:50 PDT
Note You need to log in before you can comment on or make changes to this bug.