[Qt] Fix MiniBrowser by using correct syntax for qrc URLs https://bugs.webkit.org/show_bug.cgi?id=86761

Reviewed by Alexis Menard.

* MiniBrowser/qt/BrowserWindow.cpp:
(BrowserWindow::BrowserWindow):
(BrowserWindow::updateVisualMockTouchPoints):

Canonical link: https://commits.webkit.org/104381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117474 268f45cc-cd09-0410-ab3c-d52691b4dbfc